--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello CoursEra</h1>>
+<h1>Hello CoursEra! Its a great course.</h1>>
 </body>
 </html>
